--- a/Scavenger_Hunt/.htacess.md
+++ b/Scavenger_Hunt/.htacess.md
@@ -1,1 +1,7 @@
-.htacess
+# written by chatGPT
+
+.htaccess is a configuration file used by the Apache web server software. It allows for decentralized management of web server configuration, and can be used to configure things like redirects, password protection, and custom error pages. The file is typically placed in the root directory of a website, and its settings apply to all files and subdirectories beneath it. However, it can also be placed in specific directories to apply those settings to that specific directory and its contents.
+
+htaccess can be used to manage permissions for specific files or directories on an Apache web server. For example, you can use .htaccess to restrict access to certain parts of your website, such as password-protecting a directory or denying access to specific IP addresses. This is done using authentication and authorization directives, such as "AuthType", "AuthName", "AuthUserFile" and "Require" that are defined in the .htaccess file.
+
+It's important to note that the .htaccess file is not the most secure way to manage permissions. It's recommended to use the main server configuration file (httpd.conf or apache2.conf) for this purpose
