--- a/Scavenger_Hunt/.htacess.md
+++ b/Scavenger_Hunt/.htacess.md
@@ -4,4 +4,29 @@
 
 htaccess can be used to manage permissions for specific files or directories on an Apache web server. For example, you can use .htaccess to restrict access to certain parts of your website, such as password-protecting a directory or denying access to specific IP addresses. This is done using authentication and authorization directives, such as "AuthType", "AuthName", "AuthUserFile" and "Require" that are defined in the .htaccess file.
 
+While it can be used to provide secure settings for a website, it can also be used to make a website less secure if not configured properly. Therefore, it is important to ensure that the .htaccess file is properly configured and secure, and to keep it up to date with the latest security best practices.
+
 It's important to note that the .htaccess file is not the most secure way to manage permissions. It's recommended to use the main server configuration file (httpd.conf or apache2.conf) for this purpose
+
+
+## Common Attacks
+There are several common types of attacks that can be directed at the .htaccess file in an Apache web server:
+
+1.**File Inclusion**: This attack can be used to include a malicious file or script in a website's code, potentially allowing an attacker to gain access to sensitive information.
+
+2.**Password cracking**: This attack can be used to guess or crack the password used to protect the .htaccess file, potentially allowing an attacker to gain access to sensitive information.
+
+3.**Directory Traversal**: This attack can be used to access files and directories that are outside of the web root, potentially allowing an attacker to gain access to sensitive information or execute arbitrary code.
+
+4.**Denial of Service (DoS)**: This attack can be used to overwhelm a website with traffic, causing it to crash or become unavailable to legitimate users.
+
+5.**Cross-Site Scripting (XSS)**: This type of attack allows an attacker to inject malicious code into a web page viewed by other users.
+
+## .htaccess apache
+
+By default, the .htaccess file is not enabled. => _/var/www/my_website.com/.htaccess_
+
+Like most Linux software packages, Apache functions on configuration files. The .htaccess file is one of these. It works by specifying a setting along with a value.
+
+https://phoenixnap.com/kb/how-to-set-up-enable-htaccess-apache#:~:text=The%20.,without%20altering%20server%20configuration%20files.
+
