--- a/Scavenger_Hunt/.DS_Store file.md
+++ b/Scavenger_Hunt/.DS_Store file.md
@@ -86,6 +86,14 @@ It's worth mentioning that this is not the only way that metadata can be stored,
 
 It's also worth noting that, while some metadata is stored in hidden files, most of the metadata is stored in the file system itself, and it's not visible to the user.
 
+## does root folder have .DS_Store file
+The root folder, also known as the root directory, is the top-most directory in the file system hierarchy on a macOS system. By default, a .DS_Store file is not created in the root folder. This is because the root folder is not a regular folder that is used to store files and folders, it is the starting point for the file system hierarchy.
+
+However, it is possible for a .DS_Store file to be created in the root folder if certain actions are taken by the user or by a script. For example, if the root folder is mounted as a network share and accessed from another macOS system, a .DS_Store file may be created. Or if a user, using the Terminal, navigates to the root folder and runs a command that creates a new folder, the Finder will create a .DS_Store file in the new folder.
+
+In general, it is not common to have a .DS_Store file in the root folder, and it's not necessary for the normal functioning of the operating system. If you find one, you may consider to remove it, but it will not cause any harm to your system.
+
+
 ## can you wrap up this thread in simple lines?
 .DS_Store is a hidden file used by macOS to store metadata about the layout and contents of a folder. Windows and Linux do not have a file similar to .DS_Store, metadata for files and folders is stored within the file system. On Windows it is stored on NTFS and on Linux, some file managers use hidden files and directories to store metadata. It's important to note that this is not the only way that metadata can be stored and other operating systems or file systems may use other methods to store metadata.
 
